...
    // MARK: @IBOutlet

    /// クイズスタートボタン
    ///
    /// - クイズがなければクイズ作成モーダルを表示する
    /// - クイズを開始する
    @IBOutlet private weak var quizStartButton: UIButton! {
        didSet {
            quizStartButton.accessibilityIdentifier = "quizStartButton"
            quizStartButton.buttonHeight(multiplier: 0.06, cornerRadius: 8)
            quizStartButton.highlightAction()
        }
    }
...
    /// クイズのカテゴリ
    ///
    /// - クイズのカテゴリがなければクイズのカテゴリ作成モーダルを表示する
    /// - クイズのカテゴリ選択画面に遷移する
    @IBOutlet private weak var quizTypeButton: UIButton! {
        didSet {
            quizTypeButton.accessibilityIdentifier = "typeButton"
            quizTypeButton.buttonHeight(multiplier: 0.06, cornerRadius: 8)
            quizTypeButton.highlightAction()
        }
    }

    /// 履歴ボタン
...
